Update User Models and RLP-API
